--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prismic-reactjs": "^1.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-slick": "^0.28.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
